--- a/app/src/main/res/layout/activity_admin_bus.xml
+++ b/app/src/main/res/layout/activity_admin_bus.xml
@@ -10,14 +10,14 @@
         android:id="@+id/adminBusRV"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/viewAdminBus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/admin_bus_search_filter" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/adminBusListHeader"
-        android:layout_width="411dp"
+        android:layout_width="0dp"
         android:layout_height="68dp"
         android:background="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,8 +42,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat_medium"
             android:gravity="center"
-            android:textColor="@color/white"
             android:text="Quản lý chuyến xe"
+            android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -51,16 +51,6 @@
             app:layout_constraintStart_toEndOf="@+id/adminBusListBackBtn"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageButton
-            android:id="@+id/adminBusAddBtn"
-            android:layout_width="27dp"
-            android:layout_height="21dp"
-            android:layout_marginEnd="24dp"
-            android:background="@drawable/ic_plus_solid"
-            android:contentDescription="@string/back"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     <ScrollView
@@ -124,4 +114,31 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <View
+        android:id="@+id/viewAdminBus"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="@color/light_gray"
+        android:layout_marginBottom="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/adminBusAddBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/panel"
+        android:fontFamily="@font/montserrat"
+        android:paddingVertical="10dp"
+        android:text="Tạo chuyến xe"
+        android:textAllCaps="false"
+        android:textColor="#fff"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewAdminBus"
+        tools:layout_editor_absoluteX="20dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
