--- a/app/src/main/res/layout/activity_admin_bus_create.xml
+++ b/app/src/main/res/layout/activity_admin_bus_create.xml
@@ -7,7 +7,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/adminBusListHeader"
-        android:layout_width="411dp"
+        android:layout_width="0dp"
         android:layout_height="68dp"
         android:background="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,8 +31,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat_medium"
             android:gravity="center"
-            android:textColor="@color/white"
             android:text="Tạo mới chuyến xe"
+            android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +44,7 @@
     <ScrollView
         android:layout_width="406dp"
         android:layout_height="567dp"
+        app:layout_constraintBottom_toTopOf="@+id/addBtnAdminBusCreateBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adminBusListHeader">
@@ -76,14 +77,14 @@
                     android:id="@+id/adminBusBtnUpload"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/blue_panel"
-                    android:fontFamily="@font/montserrat"
-                    android:drawableStart="@drawable/baseline_file_upload_24"
                     android:layout_marginTop="15dp"
+                    android:background="@drawable/blue_panel"
+                    android:drawableStart="@drawable/baseline_file_upload_24"
                     android:drawablePadding="5dp"
+                    android:fontFamily="@font/montserrat"
                     android:padding="10dp"
-                    android:textAllCaps="false"
                     android:text="Chọn một ảnh"
+                    android:textAllCaps="false"
                     android:textColor="#fff"
                     android:textSize="17sp"
                     android:textStyle="bold"
@@ -187,6 +188,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
+                    android:fontFamily="@font/montserrat_bold"
                     android:text="Giời kết thúc"
                     android:textColor="@color/black"
                     android:textStyle="bold"
@@ -253,8 +255,7 @@
                         android:id="@+id/adminBusSeatCreateET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="phone"
-                        />
+                        android:inputType="phone" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textview.MaterialTextView
@@ -291,8 +292,7 @@
                         android:id="@+id/adminBusPriceCreateET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="phone"
-                        />
+                        android:inputType="phone" />
                 </com.google.android.material.textfield.TextInputLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
