--- a/app/src/main/res/layout/activity_admin_bus_operator.xml
+++ b/app/src/main/res/layout/activity_admin_bus_operator.xml
@@ -11,14 +11,14 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/viewAdminBusOperator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/autoNhaXe" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/adminBusOperatorListHeader"
-        android:layout_width="411dp"
+        android:layout_width="0dp"
         android:layout_height="68dp"
         android:background="@color/blue"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,8 +42,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat_medium"
             android:gravity="center"
-            android:textColor="@color/white"
             android:text="Quản lý nhà xe"
+            android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -52,16 +52,6 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <ImageButton
-            android:id="@+id/adminBusOperatorAddBtn"
-            android:layout_width="27dp"
-            android:layout_height="21dp"
-            android:layout_marginEnd="15dp"
-            android:background="@drawable/ic_plus_solid"
-            android:contentDescription="@string/back"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <AutoCompleteTextView
@@ -81,4 +71,29 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/adminBusOperatorListHeader" />
+
+    <View
+        android:id="@+id/viewAdminBusOperator"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        android:background="@color/light_gray"
+        android:layout_marginBottom="100dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+    <Button
+        android:id="@+id/adminBusOperatorAddBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:background="@drawable/panel"
+        android:fontFamily="@font/montserrat"
+        android:paddingVertical="10dp"
+        android:textAllCaps="false"
+        android:text="Tạo nhà xe"
+        android:textSize="18sp"
+        android:textColor="#fff"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/viewAdminBusOperator" />
 </androidx.constraintlayout.widget.ConstraintLayout>
