--- a/app/src/main/res/layout/admin_bus_list_item.xml
+++ b/app/src/main/res/layout/admin_bus_list_item.xml
@@ -95,7 +95,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/adminBusListBodyConstraintLayout"
             android:layout_width="0dp"
-            android:layout_height="72dp"
+            android:layout_height="87dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -322,15 +322,15 @@
 
                     <Button
                         android:id="@+id/adminBusDeleteItemBtn"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="0dp"
+                        android:layout_marginEnd="8dp"
                         android:fontFamily="@font/montserrat"
                         android:text="Xóa"
                         android:textAllCaps="false"
                         android:textSize="18sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintHorizontal_bias="0.488"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
